# MIA-tools

./: README.md
CoronaryAnimation/: .gitignore  RenderVolume.py  Segment_1.vtk  animation.m  mesh.vtk  mesh.vtp
CoronaryAnimation/code/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  MyProcessing.cpp  MyProcessing.h  RenderVolume.sln  RenderVolume.vcxproj  RenderVolume.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  masks.cpp
FFR_Ours/src/: CMakeLists.txt  ExtendIdFilter.cxx  ExtendIdFilter.h  ExtendSplineFilter.cxx  ExtendSplineFilter.h  ExtendTubeFilter.cxx  ExtendTubeFilter.h  FFR.cxx  FFR.h  FFRCore.cxx  FFRCore.h  Learning.cxx  Learning.h  LearningImpl.cxx  LearningImpl.h  Project.cxx  common.cxx  common.h  demo.txt
FFR_Ours/src/OpenCV/include/opencv2/: core.hpp  ml.hpp  opencv.hpp  opencv_modules.hpp
FFR_Ours/src/OpenCV/include/opencv2/core/: affine.hpp  base.hpp  bufferpool.hpp  core_c.h  cvdef.h  directx.hpp  ippasync.hpp  mat.hpp  mat.inl.hpp  matx.hpp  ocl.hpp  operations.hpp  private.hpp  types.hpp  types_c.h  utility.hpp
FFR_Ours/src/OpenCV/lib/: opencv_ml300.lib  zlib.lib  zlibd.lib
